--- a/mp4/mp4.html
+++ b/mp4/mp4.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>啥子喃？丞相醒了？！</title>
+    <title>酷MA萌</title>
     <link rel="stylesheet" href="animate.css">
     <link rel="stylesheet" href="loading.css" type="text/css">
     <link rel="stylesheet" href="index.css">
@@ -23,21 +23,19 @@
     </script>
 </head>
 <body>
-<!--<audio src="music.wav" id="music" style="visibility: hidden;"></audio>-->
+<!-- <audio src="music.wav" id="music" style="visibility: hidden;"></audio> -->
 <div id="loader-wrapper">
     <div id="loader"></div>
     <div class="logos"></div>
     <div class="loader-section section-left"></div>
     <div class="loader-section section-right"></div>
 </div>
-<div class="page" id="start" style="display: block">
+<!-- <div class="page" id="start" style="display: block">
     <img src="bg1.jpg" style="width: 100%;height: 100%;position: absolute;top: 0;left:0;z-index: 101;" id="onoff">
     <img src="p0_1.png" alt="" class="p0_1">
-</div>
-
-<div style="width: 100px;height: 100px;position: absolute;top: 0;left:0;background: #000;z-index: 10000" id="test"></div>
-<video id="myVideo" width="640" height="1040" preload="metadata" x5-video-player-type="h5" x-webkit-airplay="true" playsinline="true" webkit-playsinline="true" style="z-index: 100">
-    <source src="格式工厂酷MA萌.mp4" autoplay="autoplay" type="video/mp4">
+</div> -->
+<video id="myVideo" width="640" height="1040" preload="metadata" x5-video-player-type="h5" x-webkit-airplay="true" playsinline="true" webkit-playsinline="true" style="z-index: 100" autoplay="autoplay" >
+    <source src="格式工厂酷MA萌.mp4" type="video/mp4">
 </video>
 <div class="page" id="page1" style="background: url('bg2.jpg');z-index: 99;display: none">
     <div class="p1_1">
