--- a/mp4/mp4.html
+++ b/mp4/mp4.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>酷MA萌</title>
-    <link rel="stylesheet" href="animate.css">
+    <!-- <link rel="stylesheet" href="animate.css"> -->
     <link rel="stylesheet" href="loading.css" type="text/css">
     <link rel="stylesheet" href="index.css">
     <script type="text/javascript">
@@ -37,7 +37,7 @@
 <video id="myVideo" width="640" height="1040" preload="metadata" x5-video-player-type="h5" x-webkit-airplay="true" playsinline="true" webkit-playsinline="true" style="z-index: 100" autoplay="autoplay" >
     <source src="格式工厂酷MA萌.mp4" type="video/mp4">
 </video>
-<div class="page" id="page1" style="background: url('bg2.jpg');z-index: 99;display: none">
+<!-- <div class="page" id="page1" style="background: url('bg2.jpg');z-index: 99;display: none">
     <div class="p1_1">
         <img src="p1_1.png" alt="" style="display: block"/>
         <img src="btn1.png" alt="" class="btn1">
@@ -47,7 +47,7 @@
     </div>
     <span id="copy">全程策划创意技术：蓝光+伍拾广告+古怪科技</span>
     <span id="visit_count" style="right: 5px;color: #FFFFFF;font-size: 10px;"></span>
-</div>
+</div> -->
 
 
 <script src="jquery-2.1.4.min.js"></script>
